# vector

./: CMakeLists.txt  README  main.cpp  test.cpp  test_exceptions.cpp  test_vector_with_allocator.cpp  vector.hpp
benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp
test/: Allocator.cpp  Allocator.hpp  CMakeLists.txt  ComparableAllocator.hpp  DynamicInt.hpp  TrackedType.hpp  test.cpp  test_assign.cpp  test_assign_tracker.cpp  test_clear.cpp  test_comparision_operator.cpp  test_constructor.cpp  test_constructors.cpp  test_copy_assignment_operator.cpp  test_copy_assignment_operator_tracker.cpp  test_copy_constructor.cpp  test_copy_constructor_tracker.cpp  test_emplace_back.cpp  test_erase.cpp  test_erase_tracker.cpp  test_initializer_list_constructor.cpp  test_insert.cpp  test_insert_copy.cpp  test_insert_copy_tracker.cpp  test_insert_tracker.cpp  test_iterators.cpp  test_move_assignment_operator.cpp  test_move_assignment_operator_tracker.cpp  test_move_constructor.cpp  test_move_constructor_tracker.cpp  test_move_if_noexcept.cpp  test_noexcept_specifier.cpp  test_pop_back.cpp  test_reserve.cpp  test_resize.cpp  test_shrink_to_fit.cpp  test_size.cpp  test_sizeof.cpp  test_swap.cpp  test_track_allocations.cpp
